--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_custom_clippers:
   flutter:
-    sdk: flutter
+     sdk: flutter
+  flutter_auth_buttons: ^0.10.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -36,8 +38,13 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
   flutter_test:
-    sdk: flutter
+     sdk: flutter
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.jpg"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -58,8 +65,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/bg.jpg
+    - assets/logo.jpg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
