--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.17.1
+  flutter_svg: ^1.1.0
+  flutter_phone_direct_caller: ^2.1.1
+  provider: ^6.0.3
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
