--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fc62_theavengers
+name: enduserapp
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -27,29 +27,30 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_custom_clippers:
   flutter:
-     sdk: flutter
-  flutter_auth_buttons: ^0.10.0
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.17.1
-  flutter_svg: ^1.1.0
-  flutter_phone_direct_caller: ^2.1.1
+  cloud_firestore: ^3.1.16
+  firebase_auth: ^3.3.18
+  firebase_core: ^1.17.0
   provider: ^6.0.3
+  shared_preferences: ^2.0.15
+  firebase_database: ^9.0.15
+  google_sign_in: ^5.3.2
+  confirm_dialog: ^1.0.1
+  motion_tab_bar: ^0.1.5
   curved_navigation_bar: ^1.0.3
+  url_launcher: ^6.1.3
+  flutter_phone_direct_caller: ^2.1.1
+  flutter_svg: ^1.1.0
 
 dev_dependencies:
-  flutter_launcher_icons: "^0.9.2"
   flutter_test:
-     sdk: flutter
-flutter_icons:
-  android: true
-  ios: true
-  image_path: "assets/logo.jpg"
+    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,10 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/bg.jpg
-    - assets/logo.jpg
-
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
