--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.fc62_theavengers">
+    package="com.example.enduserapp">
    <application
-        android:label="fc62_theavengers"
+        android:label="enduserapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
