--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   url_launcher: ^6.1.3
   flutter_phone_direct_caller: ^2.1.1
   flutter_svg: ^1.1.0
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
