--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bubble_timeline: ^1.0.5
+  flutter_custom_clippers:
   flutter:
     sdk: flutter
-
+  flutter_auth_buttons: ^0.10.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,8 +52,13 @@ dependencies:
   image_picker: ^0.8.5+3
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
   flutter_test:
     sdk: flutter
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.jpg"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -73,7 +80,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/avatar.png
+    - assets/img.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
